syntax = "proto3";
package ids;

import "schema/ids/assetID.proto";
import "schema/ids/classificationID.proto";
import "schema/ids/dataID.proto";
import "schema/ids/hashID.proto";
import "schema/ids/identityID.proto";
import "schema/ids/maintainerID.proto";
import "schema/ids/orderID.proto";
import "schema/ids/ownableID.proto";
import "schema/ids/propertyID.proto";
import "schema/ids/splitID.proto";
import "schema/ids/stringID.proto";

message ID {
  oneof impl {
    AssetID AssetID = 1;
    ClassificationID ClassificationID = 2;
    DataID DataID = 3;
    HashID HashID = 4;
    IdentityID IdentityID = 5;
    MaintainerID MaintainerID = 6;
    OrderID OrderID = 7;
    OwnableID OwnableID = 8;
    PropertyID PropertyID = 9;
    SplitID SplitID = 10;
    StringID StringID = 11;
  }
}